--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -30,7 +30,8 @@
         cursor: pointer;
         padding: 0px;
         margin: 0px;
-        background: red;
+        background: #ddd;
+        font-size: 25px;
         border: 2px solid #ddd;
         position: relative;
 
